--- a/IOSND-MemeMe1.0/IOSND-MemeMe1.0/Info.plist
+++ b/IOSND-MemeMe1.0/IOSND-MemeMe1.0/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Access to the camera so you can do memes with your own pictures</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>So that you can create Memes from your Library&apos;s photos.</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
